@@ -4,8 +4,7 @@ package # hide from PAUSE
 use strict;
 use warnings;
 
-use Class::C3;
-use Class::Inspector;
+use base 'Class::C3::Componentised';
 use Carp::Clan qw/^DBIx::Class/;
 
 sub inject_base {
@@ -29,66 +28,7 @@ sub inject_base {
     }
   }
 
-  # Yes, this is hack. But it *does* work. Please don't submit tickets about
-  # it on the basis of the comments in Class::C3, the author was on #dbix-class
-  # while I was implementing this.
-
-  eval "package $target; import Class::C3;" unless exists $Class::C3::MRO{$target};
-}
-
-sub load_components {
-  my $class = shift;
-  my $base = $class->component_base_class;
-  my @comp = map { /^\+(.*)$/ ? $1 : "${base}::$_" } grep { $_ !~ /^#/ } @_;
-  $class->_load_components(@comp);
-  Class::C3::reinitialize();
-}
-
-sub load_own_components {
-  my $class = shift;
-  my @comp = map { "${class}::$_" } grep { $_ !~ /^#/ } @_;
-  $class->_load_components(@comp);
-}
-
-sub _load_components {
-  my ($class, @comp) = @_;
-  foreach my $comp (@comp) {
-    $class->ensure_class_loaded($comp);
-  }
-  $class->inject_base($class => @comp);
-}
-
-# Given a class name, tests to see if it is already loaded or otherwise
-# defined. If it is not yet loaded, the package is require'd, and an exception
-# is thrown if the class is still not loaded.
-#
-# TODO: handle ->has_many('rel', 'Class'...) instead of
-#              ->has_many('rel', 'Some::Schema::Class'...)
-#
-# BUG: For some reason, packages with syntax errors are added to %INC on
-#      require
-sub ensure_class_loaded {
-  my ($class, $f_class) = @_;
-
-  croak "Invalid class name $f_class"
-      if ($f_class=~m/(?:\b:\b|\:{3,})/);
-  return if Class::Inspector->loaded($f_class);
-  eval "require $f_class"; # require needs a bareword or filename
-  if ($@) {
-    if ($class->can('throw_exception')) {
-      $class->throw_exception($@);
-    } else {
-      croak $@;
-    }
-  }
-}
-
-# Returns true if the specified class is installed or already loaded, false
-# otherwise
-sub ensure_class_found {
-  my ($class, $f_class) = @_;
-  return Class::Inspector->loaded($f_class) ||
-         Class::Inspector->installed($f_class);
+  $class->next::method($target, @to_inject);
 }
 
 # Returns a true value if the specified class is installed and loaded
